Wed May  7 06:53:02 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_common.h:
         
          Qualified equality operator with const to fix error with
          Unbounded_Set.

Thu May  1 00:48:38 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * CIAO_TAO.mwc:

          The location of ETCL moved from $ACE_ROOT to $ACE_ROOT/ace.

Wed Apr 30 22:16:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CIAO_TAO_DAnCE.mwc:

          The location of ETCL moved from $ACE_ROOT to $ACE_ROOT/ace.

Mon Apr 28 14:27:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_T.h
        * ciao/Dynamic_Component_Activator.h
        * ciao/Servant_Activator.h
        * CIDLC/ExecImplHeaderGenerator.cpp
        * DAnCE/TargetManager/TargetManager_exec.h
        * DAnCE/tests/NodeApplicationTest/RoundTrip_exec.h
        * docs/tutorials/Quoter/Simple/Broker/StockBroker_exec.h
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributor_exec.h
        * examples/BasicSP/BasicSP_exec.h
        * examples/BasicSP/BMClosedED/BMClosedED_exec.h
        * examples/BasicSP/BMDevice/BMDevice_exec.h
        * examples/BasicSP/BMDisplay/BMDisplay_exec.h
        * examples/BasicSP/EC/EC_exec.h
        * examples/Display/GPS/GPS_exec.h
        * examples/Display/GPS/GPS_tracing_exec.h
        * examples/Display/NavDisplay/NavDisplay_exec.h
        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI_exec.h
        * examples/Display/RateGen/RateGen_exec.h
        * examples/Hello/Receiver/Receiver_exec.h
        * examples/Hello/Sender/Sender_exec.h
        * examples/Null_Component/Null_Component_exec.h
        * examples/Swapping/Receiver/Receiver_exec.h
        * examples/Swapping/Sender/Sender_exec.h
        * examples/Swapping/Sender/Sender_exec_1.h
        * examples/Swapping/Sender/Sender_exec_2.h
        * performance-tests/Benchmark/RoundTrip/RoundTrip_exec.h