@@ -1,3 +1,9 @@
+Sun May 11 14:57:47 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * CCF/CCF/CodeGenerationKit/IndentationJava.hpp:
+        
+          Simple indentation implanter for Java source files.
+
 Wed May  7 06:53:02 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/Deployment/Deployment_common.h:
